css/styles.css
@font-face {
    font-family: 'Molen Friend Demo';
    src: url('../fonts/Molen\ Friend\ Demo.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Constance';
    src: url('../fonts/Constance-7BLXE.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

:root {
    --bg-primary: radial-gradient(hsl(28, 100%, 51%), hsl(0, 91%, 41%));
    --bg-secondary: linear-gradient(hsl(26, 100%, 50%), hsl(51, 100%, 45%));

    --bg-opened-tile: hsl(0, 0%, 100%);
    --border-opened-tile: hsl(0, 0%, 44%);
    --bg-unopened-tile: hsl(40, 100%, 65%);
    --border-unopened-tile: hsl(39, 37%, 53%);
    --border-radius: 5px;
    
    /* Hover effects */
    --bg-unopened-tile-hover: hsl(40, 100%, 50%);
    --bg-opened-tile-hover: hsl(0, 0%, 90%);
    /* Shadows */
    --shadow: inset 3.3px 3.3px 9.9px 0 hsla(0,0%,100%, 50%), 
        6.6px 5px 9.9px 0 hsla(0,0%,0%, 33%);
    --shadow-text: 3.3px 5px 6.6px hsla(0,0%,0%, 33%);

    /* Font-family */
    --font-family: 'Molen Friend Demo', sans-serif;
}

*, *::before, *::after {
    box-sizing: border-box;
}

img {
    width: 100%;
    object-fit: cover;
}

/* typography */

html {
    font-size: 62.5%;
    font-family: var(--font-family);
}

body {
    background: var(--bg-primary) no-repeat center center/cover;
    font-size: 2.6rem;
    min-height: 100vh;
    max-height: 100vh;
}

p {
    margin: 0;
}

/* Home body */

body.home {
    background: url('../img/Asset\ 3.webp') center center / cover no-repeat;
    display: grid;
    place-items: center;
    font-family: 'Constance', sans-serif;
    overflow-x: hidden;
}

/* tiles */

.tile {
    width: 100%;
    aspect-ratio: 1/1;
    border-radius: var(--border-radius); 
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: var(--shadow);
    text-shadow: var(--shadow-text);
    cursor: pointer;
    transition: background-color .4s ease, color .4s ease;
}

.tile img, .tile p {
    transition: height .2s, opacity .2s;
}

.tile:has(img) {
    padding: 0 0 .5rem .5rem;
}

.tile--opened {
    background-color: var(--bg-opened-tile);
    border: 1px solid var(--border-opened-tile);
    -webkit-text-stroke: .5px var(--border-opened-tile);
    color: #5E34EA;
}

.tile--opened:hover {
    background-color: var(--bg-opened-tile-hover);
    color: #522ad3;
}

.tile--unopened {
    background-color: var(--bg-unopened-tile);
    border: 1px solid var(--border-unopened-tile);
}

.tile--unopened:hover {
    background-color: var(--bg-unopened-tile-hover);
}

.tile--unopened--flagged {
    background-color: var(--bg-unopened-tile);
    border: 1px solid var(--border-unopened-tile);
}

.tile--unopened * {
    height: 0;
    opacity: 0;
}

.tile--opened * {
    height: auto;
    opacity: 1;
}

/* grid */

.grid {
    align-items: center;
    display: grid;
    gap: 1px;
    grid-template-columns: repeat(var(--cols, 10), 3.5rem);
    justify-content: center;
    justify-items: center;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
}

/* Status Bar */

.game-header {
    display: flex;
    justify-content: space-between;
    padding: 0.5rem 1rem;
    gap: 0 2rem;
    align-items: center;
    background: var(--bg-secondary);
    margin-bottom: 2rem;
    flex-wrap: wrap;
}

.game-header__stats {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #fff;
    text-shadow: var(--shadow-text);
}

.game-header__difficulty {
    appearance: none;
    background: var(--bg-primary);
    border-radius: var(--border-radius);
    border: 1px solid #F14646;
    color: hsl(0, 0%, 90%);
    cursor: pointer;
    font-size: 1.8rem;
    outline: 0;
    padding: .5rem 1rem;
    text-align: center;
    text-shadow: 2px 2px 3px hsla(0,0%,0%, 33%);
}

.game-header__difficulty option {
    background: #d82b08;
    color: hsl(0, 0%, 90%);
}

.game-header__back {
    align-items: start;
    background-color: transparent;
    border: 0;
    cursor: pointer;
    display: flex;
    justify-content: center;
    outline: 0;
    transition: transform .5s ease;
    width: 30px;
}

.game-header__back:hover {
    transform: translateX(20%);
}

.img-wrapper {
    width: 35px;
    height: 35px;
}

.game-header__bomb-count {
    align-self: flex-end;
}

.game-header__timer {
    align-self: flex-end;
    margin-left: 2rem;
}

/* Mode-toggler */

.mode-toggler {
    align-items: center;
    background-color: var(--bg-opened-tile);
    border-radius: var(--border-radius);
    border: 1px solid var(--border-opened-tile);
    bottom: 40px;
    box-shadow: var(--shadow);
    display: flex;
    font-size: 3.2rem;
    height: 4.2rem;
    justify-content: center;
    padding: .5rem;
    position: absolute;
    right: 28px;
    width: 4.2rem;
}

/* Home page */

.home__bg-title {
    align-items: center;
    display: flex;
    flex-direction: column;
    position: relative;
    text-align: center;
    gap: 2rem;
}

.home__bg-title .blast {
    position: absolute;
    inset: 50% auto auto 50%;
    width: min(120%, 900px);
    height: auto;
    transform: translate(-50%, -50%);
    z-index: -1;
    pointer-events: none;
}

h1 {
    font-size: clamp(2rem, 18vw, 10rem);
    line-height: 0.9;
    margin: 0;
    color: #fff;
    -webkit-text-stroke: 2px #f15a24;
    text-shadow: 0.07em 0.07em 0 #000;
    text-transform: uppercase;
}

.home__title-first-line {
    display: flex;
    align-items: center;
    justify-content: center;
}

.home__bomb {
    width: clamp(4rem, 20vw, 11rem);
    margin: 0 0.1em;
}

.home__btn-wrapper {
    position: relative;
}

.home__play-btn {
    all: unset;
    cursor: pointer;
    animation: play-btn 1s ease-in-out infinite alternate;
    background: hsl(16, 88%, 54%);
    border-radius: 18px;
    border: clamp(5px, 2vw, 10px) solid hsl(358, 85%, 52%);
    color: #fff;
    font-size: clamp(1.5rem, 10vw, 6rem);
    line-height: 1;
    padding: 1rem 3rem;
    text-shadow: 4px 5px 0px #000;
    transition: .4s;
    width: clamp(12rem, 60vw, 40rem);
    will-change: transform;
}

.home__play-btn:hover {
    background-color: hsl(16, 88%, 48%);
}

.home__joystick {
    position: absolute;
    right: clamp(-15%, -8vw, -10%);
    top: 30%;
    transform: rotate(-90deg);
    width: clamp(50px, 10vw, 100px);
    z-index: -1;
}

@-moz-document url-prefix() {
  h1 {
    -webkit-text-stroke: 4px #f15a24;
  }
}

@keyframes play-btn {
    to {
        transform: translateY(15px);
    }
}

/* buttons */
.btn {
    border-radius: 12px;
    outline: 0;
    width: clamp(7rem, 40vw, 10rem);
    padding: .5rem;
    line-height: 1;
    box-shadow: inset 5px 5px 10px hsla(0,0%,100%, 20%),
        0 5px 5px hsla(0,0%,0%, 30%);
    text-shadow: 0 -2px 10px hsla(0,0%,100%, 18%)
    ,0 5px 5px hsla(0,0%,0%, 20%);
    font-size: clamp(1.8rem, 8vw, 2.2rem);
    transition: .4s ease;
}

.btn--play {
    border: 4px solid #5c9e29;
    background-color: hsl(92, 98%, 42%);
    color: #fff;
}

.btn--play:hover {
    background-color: hsl(92, 98%, 38%);
}

.btn--quite {
    border: 4px solid #811000;
    background-color: #d40000;
    color: #fff;
}

.btn--quite:hover {
    background-color: hsl(0, 100%, 38%);
}

/* pop-up menu */

.pop-up-menu {
    background-color: #f8a23b;
    border-radius: 32px;
    border: 10px solid #ff4c33;
    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.8);
    height: auto;
    left: 50%;
    padding: 3rem 2rem;
    position: fixed;
    text-align: center;
    text-wrap: nowrap;
    top: -50%;
    transform: translate(-50%, -50%);
    transition: top 1s ease-in-out;
    width: clamp(30rem, 80vw, 50rem);
}

.pop-up__heading {
    font-size: clamp(3rem, 20vw, 6rem);
    margin: 0 0 1rem 0;
    text-shadow:
        0px -3px 0px rgba(255, 255, 255, 0.5),     
        0px 6px 0px #103d04,     
        0px 0px 15px rgba(234, 150, 48, 0.8);
    -webkit-text-stroke: 2px #000;
    color: #71c726;
}

.pop-up__heading.lose {
    text-shadow:
        0px -3px 0px rgba(255, 255, 255, 0.5),     
        0px 6px 0px #103d04,     
        0px 0px 15px rgba(234, 150, 48, 0.8);
    -webkit-text-stroke: 2px #1e1313;
    color: #d40303;
}

.pop-up__current-score {
    align-items: center;
    display: flex;
    font-size: clamp(1.6rem, 10vw ,2.5rem);
    gap: 1rem;
    justify-content: center;
    margin-bottom: .8rem;
    text-shadow: 0px 1px 1px rgba(0, 0, 0, .7);
}

.pop-up__high-score {
    align-items: center;
    color: #9A0303;
    display: flex;
    font-size: clamp(1.4rem, 8vw, 1.8rem);
    gap: .8rem;
    justify-content: center;
    margin-bottom: 1.5rem;
}

#game-start {
    display: none;
}

